--- a/.classpath
+++ b/.classpath
@@ -11,5 +11,7 @@
 	<classpathentry kind="lib" path="E:/project/j2ee/web/WEB-INF/lib/ezmorph-1.0.3.jar"/>
 	<classpathentry kind="lib" path="E:/project/j2ee/web/WEB-INF/lib/json-lib-2.1-jdk15.jar"/>
 	<classpathentry kind="lib" path="E:/project/j2ee/web/WEB-INF/lib/servlet-api.jar"/>
+	<classpathentry kind="lib" path="E:/project/j2ee/web/WEB-INF/lib/jstl.jar"/>
+	<classpathentry kind="lib" path="E:/project/j2ee/web/WEB-INF/lib/standard.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
