--- a/.classpath
+++ b/.classpath
@@ -13,5 +13,6 @@
 	<classpathentry kind="lib" path="E:/project/j2ee/web/WEB-INF/lib/servlet-api.jar"/>
 	<classpathentry kind="lib" path="E:/project/j2ee/web/WEB-INF/lib/jstl.jar"/>
 	<classpathentry kind="lib" path="E:/project/j2ee/web/WEB-INF/lib/standard.jar"/>
+	<classpathentry kind="lib" path="E:/project/j2ee/web/WEB-INF/lib/jsp-api.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
